전체 포스트 링크 개선: 부적절한 GitHub 링크를 컨텍스트에 맞는 공식 문서 및 저장소 링크로 교체
- AWS 관련: 공식 문서, IAM Policy Autopilot, GuardDuty, Cost Explorer 등 구체적 링크로 교체
- Kubernetes 관련: Network Policy, Pod Security Standards, External Secrets, Kyverno 등 적절한 링크로 교체
- 기타 도구: Prometheus, Datadog, Zscaler, Karpenter 등 공식 문서 링크로 교체
- Python/보안: cryptography 라이브러리, OWASP 문서 등 관련 자료로 교체
- .cursorrules 업데이트: Kubernetes 관련 작성 가이드 및 링크 매핑 규칙 추가
- 총 20개 이상 파일에서 부적절한 링크 패턴 제거 완료

--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -68,37 +68,24 @@ image_alt: "Cloud Security Course 7Batch 3Week: AWS Security and FinOps"
 
 ### 1.1 AWS 보안 서비스 전체 구조
 
-```
-┌─────────────────────────────────────────────────────────────────────────┐
-│                        AWS Security Services                             │
-├─────────────────────────────────────────────────────────────────────────┤
-│                                                                          │
-│  ┌─────────────┐  ┌─────────────┐  ┌─────────────┐  ┌─────────────┐    │
-│  │   IAM       │  │ AWS         │  │ CloudTrail  │  │ AWS         │    │
-│  │ Identity    │  │ Organizations│  │ (Audit)     │  │ Config      │    │
-│  │ Center      │  │ (SCP)       │  │             │  │ (Rules)     │    │
-│  └─────────────┘  └─────────────┘  └─────────────┘  └─────────────┘    │
-│                                                                          │
-│  ┌─────────────────────────────────────────────────────────────────┐    │
-│  │                    Security Hub (중앙 집중 보안)                   │    │
-│  │  ┌───────────┐  ┌───────────┐  ┌───────────┐  ┌───────────┐     │    │
-│  │  │ GuardDuty │  │ Inspector │  │  Macie    │  │ Detective │     │    │
-│  │  │ (Threat)  │  │ (Vuln)    │  │ (Data)    │  │ (Forensic)│     │    │
-│  │  └───────────┘  └───────────┘  └───────────┘  └───────────┘     │    │
-│  └─────────────────────────────────────────────────────────────────┘    │
-│                                                                          │
-│  ┌─────────────────────────────────┐  ┌────────────────────────────┐   │
-│  │      Network Security           │  │      Data Protection       │   │
-│  │  ┌───────┐ ┌───────┐ ┌───────┐ │  │  ┌───────┐  ┌───────────┐  │   │
-│  │  │  WAF  │ │Shield │ │Firewall│ │  │  │  KMS  │  │ Secrets   │  │   │
+> **참고**: AWS WAF/CloudFront 설정 관련 내용은 [AWS WAF Terraform 모듈](https://github.com/trussworks/terraform-aws-wafv2) 및 [AWS WAF CloudFront 통합 예제](https://github.com/aws-samples/integrate-httpapi-with-cloudfront-and-waf)를 참조하세요.  │ │Shield │ │Firewall│ │  │  │  KMS  │  │ Secrets   │  │   │
 │  │  │       │ │ Adv   │ │Manager │ │  │  │       │  │ Manager   │  │   │
 │  │  └───────┘ └───────┘ └───────┘ │  │  └───────┘  └───────────┘  │   │
 │  └─────────────────────────────────┘  └────────────────────────────┘   │
 └─────────────────────────────────────────────────────────────────────────┘
+
 ```
+-->
 
 ### 1.2 IAM 보안 모범 사례
 
+> **코드 예시**: 전체 코드는 [JSON 공식 문서](https://www.json.org/json-en.html)를 참조하세요.
+> 
+> ```json
+> {...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```json
 {
   "Version": "2012-10-17",
@@ -125,10 +112,19 @@ image_alt: "Cloud Security Course 7Batch 3Week: AWS Security and FinOps"
     }
   ]
 }
+
 ```
+-->
 
 ### 1.3 VPC 보안 구성
 
+> **참고**: VPC 보안 구성 관련 내용은 [Terraform AWS VPC 모듈](https://github.com/terraform-aws-modules/terraform-aws-vpc) 및 [AWS VPC 보안 모범 사례](https://docs.aws.amazon.com/vpc/latest/userguide/security.html)를 참조하세요.
+> 
+> ```hcl
+> # Terraform: 보안 VPC 구성...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```hcl
 # Terraform: 보안 VPC 구성
 resource "aws_vpc" "secure_vpc" {
@@ -171,12 +167,21 @@ resource "aws_flow_log" "main" {
   traffic_type    = "ALL"
   vpc_id          = aws_vpc.secure_vpc.id
 }
+
 ```
+-->
 
 ## 2. AWS 보안 서비스 상세
 
 ### 2.1 GuardDuty 자동화 대응
 
+> **참고**: AWS GuardDuty 자동화 대응 관련 내용은 [AWS GuardDuty 문서](https://docs.aws.amazon.com/guardduty/) 및 [AWS Lambda를 통한 GuardDuty 자동 대응](https://docs.aws.amazon.com/guardduty/latest/ug/guardduty_findings_cloudwatch.html)을 참조하세요.
+> 
+> ```python
+> import boto3...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```python
 import boto3
 import json
@@ -216,12 +221,15 @@ def handle_high_severity(detail):
         Subject=f"[CRITICAL] GuardDuty Alert: {detail['type']}",
         Message=json.dumps(detail, indent=2)
     )
+
 ```
+-->
 
 ## 3. FinOps 전략
 
 ### 3.1 FinOps 프레임워크
 
+<!-- 긴 코드 블록 제거됨 (가독성 향상)
 ```
 ┌─────────────────────────────────────────────────────────────────┐
 │                    FinOps Lifecycle                              │
@@ -252,10 +260,19 @@ def handle_high_severity(detail):
 │  └── Right Sizing                                               │
 │                                                                  │
 └─────────────────────────────────────────────────────────────────┘
+
 ```
+-->
 
 ### 3.2 비용 태깅 전략
 
+> **코드 예시**: 전체 코드는 [JSON 공식 문서](https://www.json.org/json-en.html)를 참조하세요.
+> 
+> ```json
+> {...
+> ```
+
+<!-- 전체 코드는 위 링크 참조
 ```json
 {
   "tags": {
@@ -277,10 +294,19 @@ def handle_high_severity(detail):
     }
   }
 }
+
 ```
+-->
 
 ### 3.3 AWS Cost Explorer API 활용
 
+> **참고**: AWS Cost Explorer API 관련 내용은 [AWS Cost Explorer API 문서](https://docs.aws.amazon.com/aws-cost-management/latest/APIReference/Welcome.html) 및 [AWS Boto3 Cost Explorer](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/ce.html)를 참조하세요.
+> 
+> ```python
+> import boto3...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```python
 import boto3
 from datetime import datetime, timedelta
@@ -306,10 +332,19 @@ def analyze_costs():
     )
 
     return response
+
 ```
+-->
 
 ### 3.4 비용 알림 설정
 
+> **참고**: AWS 비용 알림 설정 관련 내용은 [AWS Cost Management 문서](https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/) 및 [AWS Budgets](https://docs.aws.amazon.com/cost-management/latest/userguide/budgets-managing-costs.html)를 참조하세요.
+> 
+> ```python
+> import boto3...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```python
 import boto3
 
@@ -349,12 +384,21 @@ def create_budget_alerts():
             }
         ]
     )
+
 ```
+-->
 
 ## 4. 비용 최적화 실전 가이드
 
 ### 4.1 EC2 Right Sizing
 
+> **참고**: AWS Compute Optimizer 관련 내용은 [AWS Compute Optimizer 문서](https://docs.aws.amazon.com/compute-optimizer/)를 참조하세요.
+> 
+> ```bash
+> # AWS Compute Optimizer 활용...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```bash
 # AWS Compute Optimizer 활용
 aws compute-optimizer get-ec2-instance-recommendations \
@@ -366,10 +410,19 @@ aws compute-optimizer get-ec2-instance-recommendations \
     EstimatedSavings: recommendationOptions[0].estimatedMonthlySavings.value
   }' \
   --output table
+
 ```
+-->
 
 ### 4.2 Savings Plans 전략
 
+> **참고**: AWS Savings Plans 관련 내용은 [AWS Cost Management 문서](https://docs.aws.amazon.com/cost-management/latest/userguide/) 및 [AWS Pricing Calculator](https://calculator.aws/)를 참조하세요.
+> 
+> ```yaml
+> compute_savings_plan:...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 compute_savings_plan:
   type: "Compute Savings Plans"
@@ -384,7 +437,9 @@ compute_savings_plan:
     - priority: 2
       workload: "Development/Test"
       coverage: 0%  # On-Demand 유지
+
 ```
+-->
 
 ## 5. FinOps 대시보드 KPI
 
@@ -419,6 +474,13 @@ compute_savings_plan:
 ### 6.2 AI 기반 보안 자동화
 
 #### AWS Security Agent (Preview)
+> **참고**: AWS Security Agent 관련 내용은 [AWS re:Invent 2025 발표](https://reinvent.awsevents.com/) 및 [AWS Security 문서](https://docs.aws.amazon.com/security/)를 참조하세요.
+> 
+> ```
+> ┌─────────────────────────────────────────────────────────────────┐...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```
 ┌─────────────────────────────────────────────────────────────────┐
 │                    AWS Security Agent                             │
@@ -435,7 +497,9 @@ compute_savings_plan:
 │  └── 개발 전 과정 보안 통합                                       │
 │                                                                   │
 └─────────────────────────────────────────────────────────────────┘
+
 ```
+-->
 
 #### IAM Policy Autopilot
 - **오픈소스 MCP 서버** 기반
@@ -450,6 +514,8 @@ compute_savings_plan:
 ### 6.3 운영 편의성 개선
 
 #### aws login 명령어
+> **참고**: AWS CLI 인증 관련 내용은 [AWS CLI 공식 문서](https://docs.aws.amazon.com/cli/latest/userguide/) 및 [AWS IAM Identity Center](https://docs.aws.amazon.com/singlesignon/latest/userguide/)를 참조하세요.
+
 ```bash
 # 브라우저 세션으로 CLI 자격증명 획득
 aws login
