--- a/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
+++ b/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
@@ -152,6 +152,13 @@ image_alt: "Cloud Security Course 7Batch 4Week: AWS Vulnerability Inspection and
 - 컨텍스트 인식 침투 테스트
 - ISMS-P 인증 대응에 필요한 취약점 점검 자동화
 
+> **참고**: AWS Security Agent 관련 내용은 [AWS re:Invent 2025 발표](https://reinvent.awsevents.com/) 및 [AWS Security 문서](https://docs.aws.amazon.com/security/)를 참조하세요.
+> 
+> ```python
+> # AWS Security Agent 활용 예시 (개념적 코드)...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```python
 # AWS Security Agent 활용 예시 (개념적 코드)
 def security_review_pipeline():
@@ -168,7 +175,9 @@ def security_review_pipeline():
         "ISMS 통제항목 매핑"
     ]
     return stages
+
 ```
+-->
 
 #### GuardDuty Extended Threat Detection
 - EC2 인스턴스 및 ECS 태스크용 **2개의 새로운 공격 시퀀스 탐지** 추가
@@ -197,6 +206,8 @@ def security_review_pipeline():
 - AI 코딩 어시스턴트가 IAM 정책을 자동 생성
 - 최소 권한 원칙 자동 준수
 
+> **참고**: 관련 예제는 [공식 문서](https://www.json.org/json-en.html)를 참조하세요.
+
 ```json
 {
   "PolicyName": "AutoPilot-Generated-Policy",
@@ -212,6 +223,8 @@ def security_review_pipeline():
 ### 5.4 운영 편의성 개선
 
 #### aws login 명령어
+> **참고**: AWS CLI 인증 관련 내용은 [AWS CLI 공식 문서](https://docs.aws.amazon.com/cli/latest/userguide/) 및 [AWS IAM Identity Center](https://docs.aws.amazon.com/singlesignon/latest/userguide/)를 참조하세요.
+
 ```bash
 # 브라우저 기반 CLI 인증
 aws login
