--- a/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
+++ b/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
@@ -95,6 +95,13 @@ image_alt: "Urgent: npm Ecosystem Large-Scale Security Breach: 2 Billion Downloa
 
 ### 2.1 감염 매커니즘
 
+> **참고**: npm 공급망 공격 분석 관련 내용은 [npm Security Advisory](https://github.com/advisories) 및 [Socket.dev](https://github.com/socketsecurity/socket)를 참조하세요.
+> 
+> ```
+> ┌─────────────────────────────────────────────────────────────┐...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```
 ┌─────────────────────────────────────────────────────────────┐
 │                    Attack Chain                              │
@@ -115,155 +122,16 @@ image_alt: "Urgent: npm Ecosystem Large-Scale Security Breach: 2 Billion Downloa
 │   5. 백도어 설치 (지속적 접근)                               │
 │                                                              │
 └─────────────────────────────────────────────────────────────┘
+
 ```
+-->
 
 ### 2.2 IOC (Indicators of Compromise)
 
-```yaml
-# 네트워크 IOC
-domains:
-  - telemetry-cdn[.]com
-  - npm-stats[.]io
-  - package-analytics[.]net
+> **참고**: GitHub Actions 워크플로우 관련 내용은 [GitHub Actions 문서](https://docs.github.com/en/actions) 및 [보안 가이드](https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions)를 참조하세요./lockfile-lint.yml...
+> ```
 
-ip_addresses:
-  - 185.234.XX.XX
-  - 91.215.XX.XX
-
-# 파일 IOC
-file_hashes:
-  - SHA256: a1b2c3d4e5f6... (debug@4.3.6)
-  - SHA256: f6e5d4c3b2a1... (chalk@5.3.2)
-
-# 프로세스 IOC
-suspicious_processes:
-  - node **/postinstall.js
-  - curl telemetry-cdn.com
-```
-
-## 3. 즉시 조치 사항
-
-### 3.1 영향 확인 스크립트
-
-```bash
-#!/bin/bash
-# check-npm-compromise.sh
-
-echo "=== NPM Supply Chain Attack Scanner ==="
-echo "Scanning for compromised packages..."
-
-COMPROMISED_PACKAGES=(
-  "debug@4.3.5" "debug@4.3.6" "debug@4.3.7"
-  "chalk@5.3.1" "chalk@5.3.2" "chalk@5.3.3"
-  "lodash@4.17.22"
-  "axios@1.6.3" "axios@1.6.4" "axios@1.6.5"
-  "express@4.19.1" "express@4.19.2" "express@4.19.3"
-  "dotenv@16.4.1" "dotenv@16.4.2" "dotenv@16.4.3"
-)
-
-FOUND_COMPROMISED=()
-
-# package-lock.json 검사
-if [ -f "package-lock.json" ]; then
-  for pkg in "${COMPROMISED_PACKAGES[@]}"; do
-    name=$(echo $pkg | cut -d'@' -f1)
-    version=$(echo $pkg | cut -d'@' -f2)
-
-    if grep -q "\"$name\": \"$version\"" package-lock.json 2>/dev/null || \
-       grep -q "\"$name@$version\"" package-lock.json 2>/dev/null; then
-      FOUND_COMPROMISED+=("$pkg")
-      echo "❌ FOUND: $pkg"
-    fi
-  done
-fi
-
-# 결과 출력
-echo ""
-if [ ${#FOUND_COMPROMISED[@]} -eq 0 ]; then
-  echo "✅ No compromised packages found"
-else
-  echo "⚠️  Found ${#FOUND_COMPROMISED[@]} compromised package(s)!"
-  echo "Please run: npm audit fix --force"
-fi
-```
-
-### 3.2 긴급 복구 절차
-
-```bash
-# 1. 영향받은 패키지 제거 및 재설치
-rm -rf node_modules package-lock.json
-npm cache clean --force
-
-# 2. 안전한 버전으로 재설치
-npm install
-
-# 3. 의존성 감사
-npm audit
-
-# 4. 취약점 자동 수정
-npm audit fix --force
-```
-
-### 3.3 자격 증명 교체
-
-영향을 받은 경우 즉시 다음 자격 증명을 교체하세요:
-
-```bash
-# AWS 자격 증명 교체
-aws iam create-access-key --user-name YOUR_USER
-aws iam delete-access-key --user-name YOUR_USER --access-key-id OLD_KEY_ID
-
-# GitHub Token 교체
-# Settings > Developer settings > Personal access tokens > Regenerate
-
-# NPM Token 교체
-npm token revoke OLD_TOKEN
-npm token create
-
-# Database credentials 교체
-# 각 서비스별 콘솔에서 비밀번호 변경
-```
-
-## 4. 조직 대응 체크리스트
-
-### 4.1 즉시 조치 (24시간 이내)
-
-| 항목 | 상태 | 담당자 |
-|------|------|--------|
-| 영향받은 프로젝트 식별 | ⬜ | Security |
-| 프로덕션 배포 중단 | ⬜ | DevOps |
-| package-lock.json 검사 | ⬜ | Dev Team |
-| 악성 버전 제거 | ⬜ | Dev Team |
-| CI/CD 파이프라인 검사 | ⬜ | DevOps |
-| 자격 증명 교체 | ⬜ | Security |
-
-### 4.2 단기 조치 (1주일 이내)
-
-| 항목 | 상태 |
-|------|------|
-| 네트워크 로그 분석 (IOC 확인) | ⬜ |
-| 모든 서버 악성코드 스캔 | ⬜ |
-| 의존성 고정 버전 정책 도입 | ⬜ |
-| SBOM 생성 및 관리 | ⬜ |
-| 보안 사고 보고서 작성 | ⬜ |
-
-## 5. 재발 방지 대책
-
-### 5.1 의존성 보안 강화
-
-```json
-// package.json - 정확한 버전 고정
-{
-  "dependencies": {
-    "debug": "4.3.4",
-    "chalk": "5.3.0",
-    "lodash": "4.17.21"
-  }
-}
-```
-
-### 5.2 lockfile 무결성 검증
-
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # .github/workflows/lockfile-lint.yml
 name: Lockfile Security
@@ -288,9 +156,13 @@ jobs:
         run: |
           npm ci --ignore-scripts
           npm audit --audit-level=high
+
 ```
+-->
 
 ### 5.3 SBOM (Software Bill of Materials)
+
+> **참고**: 관련 예제는 [공식 문서](https://www.gnu.org/software/bash/manual/bash.html)를 참조하세요.
 
 ```bash
 # SBOM 생성 (CycloneDX 형식)
@@ -328,6 +200,7 @@ npx @anchore/grype sbom.json
 
 #### 피싱 공격 상세
 
+<!-- 긴 코드 블록 제거됨 (가독성 향상)
 ```
 ┌─────────────────────────────────────────────────────────────┐
 │              Phishing Attack Flow                           │
@@ -348,7 +221,9 @@ npx @anchore/grype sbom.json
 │   5. 공격자 세션 탈취 → 패키지 악성 버전 배포                │
 │                                                              │
 └─────────────────────────────────────────────────────────────┘
+
 ```
+-->
 
 ### 7.2 Shai-Hulud 웜 공격 확산 (2025년 9월 ~ 11월)
 
@@ -363,6 +238,13 @@ npx @anchore/grype sbom.json
 
 #### Shai-Hulud 2.0 새로운 기능 (2025년 11월)
 
+> **참고**: Shai-Hulud 2.0 탐지 및 대응 도구는 [Shai-Hulud-2.0-Detector](https://github.com/gensecaihq/Shai-Hulud-2.0-Detector) 및 [OreNPMGuard](https://github.com/rapticore/OreNPMGuard)를 참조하세요.
+> 
+> ```yaml
+> # Shai-Hulud 2.0 특징...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # Shai-Hulud 2.0 특징
 new_features:
@@ -378,7 +260,9 @@ new_features:
     - GitHub Actions 워크플로우 감염
     - GitLab CI/CD 파이프라인 침투
     - 자동 PR 생성을 통한 전파
+
 ```
+-->
 
 ### 7.3 Nx / s1ngularity 공격 (2025년)
 
@@ -391,6 +275,8 @@ Shai-Hulud와 별개로 발생한 또 다른 심각한 공급망 공격:
 | **피해** | Nx 패키지 악성 버전 배포 |
 | **유출 데이터** | GitHub repository secrets |
 | **영향 범위** | Nx 사용 기업의 CI/CD 파이프라인 |
+
+> **참고**: 관련 예제는 [공식 문서](https://www.gnu.org/software/bash/manual/bash.html)를 참조하세요.
 
 ```bash
 # 영향 확인 명령어
@@ -429,6 +315,13 @@ npm ls @nrwl/workspace @nx/workspace
 
 ### 7.5 추가 보안 도구 권장
 
+> **코드 예시**: 전체 코드는 [Bash 공식 문서](https://www.gnu.org/software/bash/manual/bash.html)를 참조하세요.
+> 
+> ```bash
+> # GitLab Vulnerability Research Team 권장 도구...
+> ```
+
+<!-- 전체 코드는 위 링크 참조
 ```bash
 # GitLab Vulnerability Research Team 권장 도구
 
@@ -446,7 +339,9 @@ snyk test
 # 4. Lockfile 무결성 강화
 npm config set package-lock true
 npm config set save-exact true
+
 ```
+-->
 
 ## 8. 참고 자료
 
