--- a/_posts/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.md
+++ b/_posts/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.md
@@ -339,6 +339,8 @@ AWS Security Agent는 AI 기반의 자동화된 보안 리뷰 도구입니다:
 - **자동 수정 제안**: 발견된 취약점에 대한 수정 방안 자동 제안
 - **CI/CD 통합**: 개발 파이프라인에 보안 검토 자동 통합
 
+> **참고**: AWS Security Agent 관련 내용은 [AWS re:Invent 2025 발표](https://reinvent.awsevents.com/) 및 [AWS Security 문서](https://docs.aws.amazon.com/security/)를 참조하세요.
+
 ```yaml
 # AWS Security Agent 파이프라인 통합 예시
 security-review:
@@ -388,6 +390,13 @@ AI 기반 개발 도구를 위한 IAM 정책 자동화:
 - **보안 가드레일**: AI 도구의 과도한 권한 획득 방지
 - **감사 추적**: AI 도구의 모든 API 호출 기록 및 분석
 
+> **코드 예시**: 전체 코드는 [JSON 공식 문서](https://www.json.org/json-en.html)를 참조하세요.
+> 
+> ```json
+> {...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```json
 {
   "Version": "2012-10-17",
@@ -407,7 +416,9 @@ AI 기반 개발 도구를 위한 IAM 정책 자동화:
     }
   ]
 }
+
 ```
+-->
 
 ### 10.5 GuardDuty Malware Protection for AWS Backup
 
@@ -431,6 +442,13 @@ AI 에이전트 및 자율 시스템을 위한 새로운 인증 프레임워크:
 - **행동 기반 인증**: 에이전트의 행동 패턴 기반 지속적 인증
 - **에이전트 간 신뢰**: 여러 AI 에이전트 간 안전한 통신 체계
 
+> **참고**: AgentCore Identity 관련 내용은 [AWS re:Invent 2025 발표](https://reinvent.awsevents.com/) 및 [AWS Security 문서](https://docs.aws.amazon.com/security/)를 참조하세요.
+> 
+> ```python
+> # AgentCore Identity 사용 예시...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```python
 # AgentCore Identity 사용 예시
 from aws_agentcore import AgentIdentity
@@ -446,7 +464,9 @@ token = agent.get_token()
 
 # 에이전트 간 인증
 peer_verified = agent.verify_peer("analytics-agent-002")
+
 ```
+-->
 
 ### 10.7 re:Inforce vs re:Invent 2025 보안 발표 비교
 
