--- a/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
+++ b/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
@@ -167,6 +167,7 @@ Karpenter는 클러스터 비용 최적화를 위해 **노드 통합(Consolidati
 > - `consolidationPolicy: WhenEmptyOrUnderutilized` 사용 시에도 더 보수적으로 동작
 > - PDB를 더 잘 존중하며, Pod readiness를 확인 후 다음 노드 종료 진행
 
+<!-- 긴 코드 블록 제거됨 (가독성 향상)
 ```
 Before Consolidation:
 ┌─────────────┐ ┌─────────────┐ ┌─────────────┐
@@ -182,10 +183,19 @@ After Consolidation:
 │ [Pod][Pod] │ │ │
 │ CPU: 65% │ │ │
 └─────────────┘ └─────────────┘
+
 ```
+-->
 
 ### 2.2 문제의 NodePool 설정
 
+> **참고**: Karpenter NodePool 설정 관련 내용은 [Karpenter 공식 문서](https://karpenter.sh/) 및 [Karpenter GitHub 저장소](https://github.com/aws/karpenter)를 참조하세요.
+> 
+> ```yaml
+> # 문제가 된 NodePool 설정...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # 문제가 된 NodePool 설정
 apiVersion: karpenter.sh/v1
@@ -204,10 +214,19 @@ spec:
  consolidateAfter: 30s # 30초 후 바로 통합 시도
  budgets:
  - nodes: "100%" # 모든 노드 동시 삭제 가능!
+
 ```
+-->
 
 ### 2.3 PDB 미설정 문제
 
+> **참고**: PodDisruptionBudget 설정 관련 내용은 [Kubernetes PDB 문서](https://kubernetes.io/docs/tasks/run-application/configure-pdb/) 및 [Karpenter 문서](https://karpenter.sh/)를 참조하세요.
+> 
+> ```yaml
+> # PodDisruptionBudget이 없었음...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # PodDisruptionBudget이 없었음
 # 결과: 모든 Pod가 동시에 종료될 수 있음
@@ -222,12 +241,21 @@ spec:
  selector:
  matchLabels:
  app: api-gateway
+
 ```
+-->
 
 ## 3. 장애 발생 과정 상세
 
 ### 3.1 이벤트 로그 분석
 
+> **참고**: Karpenter 로그 분석 관련 내용은 [Karpenter 문서](https://karpenter.sh/) 및 [Kubernetes 로깅 모범 사례](https://kubernetes.io/docs/concepts/cluster-administration/logging/)를 참조하세요.
+> 
+> ```bash
+> # Karpenter 로그 확인...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```bash
 # Karpenter 로그 확인
 kubectl logs -n karpenter deploy/karpenter -c controller --since=1h | grep -i consolidat
@@ -239,9 +267,13 @@ kubectl logs -n karpenter deploy/karpenter -c controller --since=1h | grep -i co
 15:43:10 INFO controller.disruption Disrupting node ip-10-0-2-156 for consolidation
 15:43:15 INFO controller.node Draining node ip-10-0-1-234
 15:43:15 INFO controller.node Draining node ip-10-0-2-156
+
 ```
+-->
 
 ### 3.2 Pod 이벤트
+
+> **참고**: Kubernetes Pod 이벤트 분석 관련 내용은 [Kubernetes 이벤트 문서](https://kubernetes.io/docs/reference/kubernetes-api/cluster-resources/event-v1/) 및 [Kubernetes 디버깅 가이드](https://kubernetes.io/docs/tasks/debug/)를 참조하세요.
 
 ```bash
 kubectl get events --field-selector reason=Killing -A
@@ -255,6 +287,7 @@ prod 10m Warning Killing pod/order-service-xyz Stopping container...
 
 ### 3.3 영향 범위
 
+<!-- 긴 코드 블록 제거됨 (가독성 향상)
 ```
 ┌────────────────────────────────────────────────────────────────────┐
 │ Impact Analysis │
@@ -273,12 +306,21 @@ prod 10m Warning Killing pod/order-service-xyz Stopping container...
 │ └── Customer complaints: 50+ │
 │ │
 └────────────────────────────────────────────────────────────────────┘
+
 ```
+-->
 
 ## 4. 긴급 대응
 
 ### 4.1 즉시 조치 사항
 
+> **참고**: Karpenter 긴급 대응 관련 내용은 [Karpenter 공식 문서](https://karpenter.sh/) 및 [Karpenter GitHub 저장소](https://github.com/aws/karpenter)를 참조하세요.
+> 
+> ```bash
+> # 1. Karpenter 비활성화 (긴급)...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```bash
 # 1. Karpenter 비활성화 (긴급)
 kubectl scale deployment karpenter -n karpenter --replicas=0
@@ -293,9 +335,13 @@ kubectl get nodes
 
 # 4. Pod 재시작 강제
 kubectl rollout restart deployment -n prod
+
 ```
+-->
 
 ### 4.2 서비스 복구 확인
+
+> **참고**: Kubernetes Health Check 관련 내용은 [Kubernetes Liveness/Readiness Probes 문서](https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/)를 참조하세요.
 
 ```bash
 # Health check 확인
@@ -310,6 +356,13 @@ done
 
 ### 5.1 NodePool 설정 수정
 
+> **참고**: Karpenter NodePool 설정 관련 내용은 [Karpenter 공식 문서](https://karpenter.sh/) 및 [Karpenter GitHub 저장소](https://github.com/aws/karpenter)를 참조하세요.
+> 
+> ```yaml
+> # 수정된 NodePool 설정...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # 수정된 NodePool 설정
 apiVersion: karpenter.sh/v1
@@ -338,10 +391,19 @@ spec:
  - nodes: "0"
  schedule: "0 9-18 * * 1-5" # 업무 시간에는 삭제 금지
  duration: 9h
+
 ```
+-->
 
 ### 5.2 PodDisruptionBudget 적용
 
+> **참고**: PodDisruptionBudget 설정 관련 내용은 [Kubernetes PDB 문서](https://kubernetes.io/docs/tasks/run-application/configure-pdb/) 및 [Karpenter 문서](https://karpenter.sh/)를 참조하세요.
+> 
+> ```yaml
+> # Critical 서비스용 PDB...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # Critical 서비스용 PDB
 apiVersion: policy/v1
@@ -382,10 +444,19 @@ spec:
  app: ${app}
 EOF
 done
+
 ```
+-->
 
 ### 5.3 Pod Anti-Affinity 설정
 
+> **참고**: Pod Anti-Affinity 설정 관련 내용은 [Kubernetes Pod Affinity 문서](https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#affinity-and-anti-affinity)를 참조하세요.
+> 
+> ```yaml
+> # 같은 서비스의 Pod를 다른 노드에 분산...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # 같은 서비스의 Pod를 다른 노드에 분산
 apiVersion: apps/v1
@@ -410,13 +481,22 @@ spec:
  labelSelector:
  matchLabels:
  app: api-gateway
+
 ```
+-->
 
 ## 6. 모니터링 강화
 
 ### 6.1 Karpenter 알림 설정
 
 {% raw %}
+> **참고**: Prometheus Alert Rules 관련 내용은 [Prometheus 공식 문서](https://prometheus.io/docs/prometheus/latest/configuration/alerting_rules/) 및 [Awesome Prometheus Alerts](https://github.com/samber/awesome-prometheus-alerts)를 참조하세요.
+> 
+> ```yaml
+> # Prometheus Alert Rules...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # Prometheus Alert Rules
 apiVersion: monitoring.coreos.com/v1
@@ -445,11 +525,20 @@ spec:
  severity: info
  annotations:
  summary: "Karpenter consolidation in progress"
+
 ```
+-->
 {% endraw %}
 
 ### 6.2 Datadog 대시보드
 
+> **참고**: Datadog 모니터링 관련 내용은 [Datadog 공식 문서](https://docs.datadoghq.com/) 및 [Datadog Kubernetes 통합](https://docs.datadoghq.com/agent/kubernetes/)을 참조하세요.
+> 
+> ```yaml
+> # Datadog Monitor...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # Datadog Monitor
 {
@@ -466,7 +555,9 @@ spec:
  }
  }
 }
+
 ```
+-->
 
 ## 7. 재발 방지 체크리스트
 
