--- a/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
+++ b/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
@@ -144,6 +144,13 @@ image_alt: "Cloud Security 8Batch 1Week: From Infrastructure Essence to Security
 2025년 클라우드 보안에서 AI는 양날의 검이 되었습니다:
 
 #### AI 기반 보안 위협
+> **참고**: AI 보안 위협 관련 내용은 [OWASP Top 10 for LLM Applications](https://owasp.org/www-project-top-10-for-large-language-model-applications/) 및 [MITRE ATLAS](https://atlas.mitre.org/)를 참조하세요.
+> 
+> ```yaml
+> # 2025년 주요 AI 보안 위협...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # 2025년 주요 AI 보안 위협
 ai_security_threats:
@@ -171,7 +178,9 @@ ai_security_threats:
       - intelligent_credential_stuffing
       - adaptive_phishing
       - autonomous_vulnerability_exploitation
+
 ```
+-->
 
 #### AI 기반 보안 방어
 - **AWS Security Agent (Preview)**: AI 기반 보안 자동화
@@ -217,6 +226,13 @@ ai_security_threats:
 
 ### 5.3 클라우드 네이티브 보안
 
+> **참고**: 클라우드 네이티브 보안 관련 내용은 [CNCF Security Whitepaper](https://github.com/cncf/tag-security) 및 [Kubernetes 보안 모범 사례](https://kubernetes.io/docs/concepts/security/best-practices/)를 참조하세요.
+> 
+> ```yaml
+> # 2025년 클라우드 네이티브 보안 스택...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # 2025년 클라우드 네이티브 보안 스택
 cloud_native_security:
@@ -237,7 +253,9 @@ cloud_native_security:
     - function_permission_boundaries
     - event_source_validation
     - execution_environment_isolation
+
 ```
+-->
 
 ### 5.4 규제 및 컴플라이언스 동향
 
@@ -252,6 +270,13 @@ cloud_native_security:
 
 ### 5.5 FinOps와 보안의 융합
 
+> **참고**: FinOps와 보안 통합 관련 내용은 [FinOps Foundation](https://www.finops.org/) 및 [AWS Cost Management](https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/)를 참조하세요.
+> 
+> ```yaml
+> # 2025년 FinOps + Security 통합...
+> ```
+
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # 2025년 FinOps + Security 통합
 finops_security_integration:
@@ -269,7 +294,9 @@ finops_security_integration:
     - cost_per_protected_asset
     - security_investment_roi
     - compliance_cost_efficiency
+
 ```
+-->
 
 ## 결론
 
