--- a/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
+++ b/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
@@ -67,6 +67,7 @@ image_alt: "Cloud Security Course 7Batch 9Week: DevSecOps Integration Summary"
 
 ### 1.1 DevSecOps 파이프라인 개요
 
+<!-- 긴 코드 블록 제거됨 (가독성 향상)
 ```
 ┌──────────────────────────────────────────────────────────────────────────┐
 │ DevSecOps Pipeline │
@@ -93,7 +94,9 @@ image_alt: "Cloud Security Course 7Batch 9Week: DevSecOps Integration Summary"
 │ │Security │ │Security │ │ │ │
 │ └─────────┘ └─────────┘ └─────────────────────────────────────┘ │
 └──────────────────────────────────────────────────────────────────────────┘
+
 ```
+-->
 
 ### 1.2 보안 도구 매핑
 
@@ -112,650 +115,12 @@ image_alt: "Cloud Security Course 7Batch 9Week: DevSecOps Integration Summary"
 
 ### 2.1 완전한 CI/CD 보안 파이프라인
 
-```yaml
-# .github/workflows/devsecops-pipeline.yml
-name: Complete DevSecOps Pipeline
+> **참고**: Dependabot 설정 관련 자세한 내용은 [GitHub Dependabot 문서](https://docs.github.com/en/code-security/dependabot) 및 [GitHub Actions 예제](https://github.com/actions/starter-workflows)를 참조하세요. 자동 수정 기능 강화
 
-on:
- push:
- branches: [main, develop]
- pull_request:
- branches: [main]
+> **참고**: Dependabot 설정 관련 자세한 내용은 [GitHub Dependabot 문서](https://docs.github.com/en/code-security/dependabot) 및 [GitHub Actions 예제](https://github.com/actions/starter-workflows)를 참조하세요..yml...
+> ```
 
-env:
- REGISTRY: ghcr.io
- IMAGE_NAME: ${{ github.repository }}
-
-jobs:
- # 1단계: 코드 보안 분석
- code-security:
- runs-on: ubuntu-latest
- steps:
- - uses: actions/checkout@v4
- with:
- fetch-depth: 0
-
- - name: Secret Scanning (Gitleaks)
- uses: gitleaks/gitleaks-action@v2
- env:
- GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
- - name: SAST (Semgrep)
- uses: returntocorp/semgrep-action@v1
- with:
- config: p/default
-
- - name: Code Quality (SonarCloud)
- uses: SonarSource/sonarcloud-github-action@master
- env:
- SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
- # 2단계: 의존성 및 IaC 스캔
- dependency-scan:
- runs-on: ubuntu-latest
- steps:
- - uses: actions/checkout@v4
-
- - name: Dependency Scan (Trivy)
- uses: aquasecurity/trivy-action@master
- with:
- scan-type: 'fs'
- severity: 'CRITICAL,HIGH'
- format: 'sarif'
- output: 'trivy-results.sarif'
-
- - name: IaC Scan (Checkov)
- uses: bridgecrewio/checkov-action@master
- with:
- directory: ./terraform
- framework: terraform
-
- - name: Upload SARIF
- uses: github/codeql-action/upload-sarif@v2
- with:
- sarif_file: 'trivy-results.sarif'
-
- # 3단계: 이미지 빌드 및 스캔
- build-scan:
- needs: [code-security, dependency-scan]
- runs-on: ubuntu-latest
- outputs:
- digest: ${{ steps.build.outputs.digest }}
- steps:
- - uses: actions/checkout@v4
-
- - name: Set up Docker Buildx
- uses: docker/setup-buildx-action@v3
-
- - name: Login to Registry
- uses: docker/login-action@v3
- with:
- registry: ${{ env.REGISTRY }}
- username: ${{ github.actor }}
- password: ${{ secrets.GITHUB_TOKEN }}
-
- - name: Build Image
- id: build
- uses: docker/build-push-action@v5
- with:
- context: .
- push: true
- tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-
- - name: Scan Image (Trivy)
- uses: aquasecurity/trivy-action@master
- with:
- image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
- severity: 'CRITICAL,HIGH'
- exit-code: '1'
-
- - name: Generate SBOM
- uses: anchore/sbom-action@v0
- with:
- image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
- format: spdx-json
- output-file: sbom.spdx.json
-
- # 4단계: 이미지 서명
- sign-image:
- needs: build-scan
- runs-on: ubuntu-latest
- steps:
- - name: Install Cosign
- uses: sigstore/cosign-installer@v3
-
- - name: Sign Image
- run: |
- cosign sign --yes \
- ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ needs.build-scan.outputs.digest }}
- env:
- COSIGN_EXPERIMENTAL: 1
-
- # 5단계: 스테이징 배포 및 DAST
- deploy-staging:
- needs: sign-image
- runs-on: ubuntu-latest
- environment: staging
- steps:
- - uses: actions/checkout@v4
-
- - name: Deploy to Staging
- run: |
- kubectl apply -f k8s/staging/
-
- - name: Wait for deployment
- run: |
- kubectl rollout status deployment/app -n staging
-
- - name: DAST Scan (OWASP ZAP)
- uses: zaproxy/action-baseline@v0.10.0
- with:
- target: 'https://staging.example.com'
- rules_file_name: '.zap/rules.tsv'
-
- # 6단계: 프로덕션 배포
- deploy-production:
- needs: deploy-staging
- runs-on: ubuntu-latest
- environment: production
- steps:
- - name: Deploy to Production
- run: |
- kubectl apply -f k8s/production/
-```
-
-## 3. 클라우드 보안 아키텍처 (AWS)
-
-### 3.1 AWS 보안 서비스 통합
-
-```
-┌─────────────────────────────────────────────────────────────────────┐
-│ AWS Security Architecture │
-├─────────────────────────────────────────────────────────────────────┤
-│ │
-│ ┌──────────────────────────────────────────────────────────────┐ │
-│ │ AWS Organizations │ │
-│ │ ┌────────────┐ ┌────────────┐ ┌────────────────────────┐ │ │
-│ │ │ SCP │ │ CloudTrail │ │ AWS Config │ │ │
-│ │ │ Policies │ │ (Audit) │ │ (Compliance Rules) │ │ │
-│ │ └────────────┘ └────────────┘ └────────────────────────┘ │ │
-│ └──────────────────────────────────────────────────────────────┘ │
-│ │
-│ ┌──────────────────────────────────────────────────────────────┐ │
-│ │ Security Hub (중앙 집중 보안) │ │
-│ │ ┌────────────┐ ┌────────────┐ ┌────────────────────────┐ │ │
-│ │ │ GuardDuty │ │ Inspector │ │ Macie │ │ │
-│ │ │ (Threat) │ │(Vuln Scan) │ │ (Data Classification) │ │ │
-│ │ └────────────┘ └────────────┘ └────────────────────────┘ │ │
-│ └──────────────────────────────────────────────────────────────┘ │
-│ │
-│ ┌────────────────────────┐ ┌─────────────────────────────────┐ │
-│ │ Network Security │ │ Identity & Access │ │
-│ │ ┌──────┐ ┌──────────┐ │ │ ┌────────┐ ┌───────────────┐ │ │
-│ │ │ WAF │ │ Shield │ │ │ │ IAM │ │ IAM Identity │ │ │
-│ │ └──────┘ └──────────┘ │ │ │ │ │ Center │ │ │
-│ │ ┌──────┐ ┌──────────┐ │ │ └────────┘ └───────────────┘ │ │
-│ │ │ SG │ │ NACL │ │ │ ┌────────────────────────────┐ │ │
-│ │ └──────┘ └──────────┘ │ │ │ Secrets Manager / KMS │ │ │
-│ └────────────────────────┘ │ └────────────────────────────┘ │ │
-│ └─────────────────────────────────┘ │
-└─────────────────────────────────────────────────────────────────────┘
-```
-
-### 3.2 GuardDuty 자동 대응
-
-```python
-# Lambda: GuardDuty 자동 대응
-import boto3
-import json
-
-def lambda_handler(event, context):
- # GuardDuty 이벤트 파싱
- detail = event['detail']
- finding_type = detail['type']
- severity = detail['severity']
-
- # 심각도에 따른 자동 대응
- if severity >= 7: # HIGH/CRITICAL
- # 1. EC2 인스턴스 격리
- if 'Resource' in detail and detail['Resource']['ResourceType'] == 'Instance':
- instance_id = detail['Resource']['InstanceDetails']['InstanceId']
- isolate_instance(instance_id)
-
- # 2. IAM 사용자 비활성화
- if 'UnauthorizedAccess' in finding_type:
- if 'AccessKeyDetails' in detail['Resource']:
- access_key = detail['Resource']['AccessKeyDetails']['AccessKeyId']
- disable_access_key(access_key)
-
- # 3. 보안팀 알림
- send_alert(detail)
-
- return {'statusCode': 200}
-
-def isolate_instance(instance_id):
- """인스턴스를 격리 보안그룹으로 이동"""
- ec2 = boto3.client('ec2')
-
- # 격리용 빈 보안그룹
- isolation_sg = 'sg-isolation-no-access'
-
- ec2.modify_instance_attribute(
- InstanceId=instance_id,
- Groups=[isolation_sg]
- )
-
- print(f"Instance {instance_id} isolated")
-
-def disable_access_key(access_key_id):
- """Access Key 비활성화"""
- iam = boto3.client('iam')
-
- # Access Key 소유자 찾기
- paginator = iam.get_paginator('list_users')
- for page in paginator.paginate():
- for user in page['Users']:
- keys = iam.list_access_keys(UserName=user['UserName'])
- for key in keys['AccessKeyMetadata']:
- if key['AccessKeyId'] == access_key_id:
- iam.update_access_key(
- UserName=user['UserName'],
- AccessKeyId=access_key_id,
- Status='Inactive'
- )
- print(f"Disabled access key {access_key_id}")
- return
-
-def send_alert(finding):
- """SNS로 보안 알림 발송"""
- sns = boto3.client('sns')
- sns.publish(
- TopicArn='arn:aws:sns:ap-northeast-2:123456789:security-alerts',
- Subject=f"[CRITICAL] GuardDuty Alert: {finding['type']}",
- Message=json.dumps(finding, indent=2, default=str)
- )
-```
-
-## 4. Kubernetes 보안 체크리스트
-
-### 4.1 CIS Kubernetes Benchmark 기반
-
-```yaml
-# kube-bench로 CIS 벤치마크 검사
-apiVersion: batch/v1
-kind: Job
-metadata:
- name: kube-bench
-spec:
- template:
- spec:
- hostPID: true
- containers:
- - name: kube-bench
- image: aquasec/kube-bench:latest
- command: ["kube-bench", "--json"]
- volumeMounts:
- - name: var-lib-etcd
- mountPath: /var/lib/etcd
- readOnly: true
- - name: etc-kubernetes
- mountPath: /etc/kubernetes
- readOnly: true
- volumes:
- - name: var-lib-etcd
- hostPath:
- path: /var/lib/etcd
- - name: etc-kubernetes
- hostPath:
- path: /etc/kubernetes
- restartPolicy: Never
-```
-
-### 4.2 보안 체크리스트
-
-| 카테고리 | 항목 | 상태 |
-|---------|------|------|
-| **클러스터** | API 서버 익명 인증 비활성화 | ☑️ |
-| | etcd 암호화 활성화 | ☑️ |
-| | Audit 로깅 활성화 | ☑️ |
-| **네트워크** | 기본 NetworkPolicy 적용 | ☑️ |
-| | Ingress TLS 적용 | ☑️ |
-| | Pod 간 mTLS (Istio) | ☑️ |
-| **워크로드** | Pod Security Standards 적용 | ☑️ |
-| | Resource Limits 설정 | ☑️ |
-| | Read-only 파일시스템 | ☑️ |
-| **접근제어** | RBAC 최소 권한 | ☑️ |
-| | ServiceAccount 토큰 자동 마운트 비활성화 | ☑️ |
-| **모니터링** | Falco 런타임 보안 | ☑️ |
-| | 중앙 집중 로깅 | ☑️ |
-
-## 5. DevSecOps 성숙도 모델
-
-### 5.1 성숙도 단계
-
-```
-Level 5: 최적화
-├── AI/ML 기반 위협 예측
-├── 자동 취약점 패치
-└── 지속적인 개선 문화
-
-Level 4: 관리
-├── 보안 메트릭 대시보드
-├── 자동화된 컴플라이언스
-└── 보안 SLA 관리
-
-Level 3: 정의
-├── 표준화된 보안 파이프라인
-├── Policy as Code
-└── 보안 교육 프로그램
-
-Level 2: 반복
-├── 기본 SAST/SCA 적용
-├── 수동 보안 검토
-└── 기본 모니터링
-
-Level 1: 초기
-├── 보안 인식 시작
-├── 일부 도구 도입
-└── 애드혹 보안 활동
-```
-
-### 5.2 측정 지표 (KPIs)
-
-| 지표 | 설명 | 목표 |
-|------|------|------|
-| **MTTR** | 취약점 평균 수정 시간 | Critical: < 24h |
-| **Coverage** | 보안 스캔 적용률 | > 95% |
-| **False Positive Rate** | 오탐률 | < 10% |
-| **Security Debt** | 미해결 취약점 수 | 감소 추세 |
-| **Compliance Score** | 규정 준수 점수 | > 90% |
-
-## 6. 실무 적용 가이드
-
-### 6.1 단계별 도입 전략
-
-**Phase 1: 기반 구축 (1-2개월)**
-- CI/CD에 SAST, Secret 스캔 추가
-- 기본 컨테이너 이미지 스캔
-- 보안 교육 시작
-
-**Phase 2: 확장 (2-3개월)**
-- SCA, DAST 추가
-- IaC 보안 스캔
-- Policy as Code 도입
-
-**Phase 3: 고도화 (3-6개월)**
-- 런타임 보안 (Falco)
-- SIEM 연동
-- 자동화된 대응
-
-**Phase 4: 최적화 (지속)**
-- 메트릭 기반 개선
-- 보안 문화 정착
-- 지속적 개선
-
-## 7. 과정 전체 회고
-
-| 주차 | 주제 | 핵심 내용 |
-|------|------|----------|
-| 1주차 | 인프라 기초 | 네트워크, 서버, 가상화 |
-| 2주차 | AWS 보안 | VPC, IAM, Security Services |
-| 3주차 | FinOps | 비용 최적화, 거버넌스 |
-| 4주차 | 취약점 점검 | ISMS-P, AWS Inspector |
-| 5주차 | Control Tower | Landing Zone, ZTNA |
-| 6주차 | Cloudflare/GitHub | CDN 보안, GitHub Security |
-| 7주차 | Docker/K8s | 컨테이너 보안 기초 |
-| 8주차 | CI/CD 보안 | Pipeline Security, RBAC |
-| 9주차 | 통합 정리 | DevSecOps 전체 아키텍처 |
-
-## 8. 2025년 DevSecOps 트렌드
-
-### 8.1 AI 기반 보안 자동화
-
-2025년 DevSecOps 환경에서 가장 주목할 만한 변화는 AI 기반 보안 도구의 급격한 발전입니다.
-
-#### AI 코딩 어시스턴트 보안
-
-```
-┌─────────────────────────────────────────────────────────────────────┐
-│ AI 코딩 어시스턴트 보안 검증 프로세스 │
-├─────────────────────────────────────────────────────────────────────┤
-│ │
-│ ┌──────────────┐ ┌──────────────┐ ┌──────────────┐ │
-│ │ AI 코드 생성 │───►│ 보안 검증 │───►│ 코드 배포 │ │
-│ │ (Copilot/Q) │ │ (자동화) │ │ (승인 후) │ │
-│ └──────────────┘ └──────────────┘ └──────────────┘ │
-│ │ │
-│ ▼ │
-│ ┌─────────────────────────────────────────┐ │
-│ │ 검증 항목 │ │
-│ │ - SAST 스캔 (취약점 패턴) │ │
-│ │ - 라이선스 검증 (저작권 침해) │ │
-│ │ - 코드 품질 분석 │ │
-│ │ - 비밀 정보 누출 검사 │ │
-│ └─────────────────────────────────────────┘ │
-└─────────────────────────────────────────────────────────────────────┘
-```
-
-GitHub Copilot, Amazon Q Developer 등 AI 코딩 어시스턴트가 생성한 코드에 대한 보안 검증이 필수가 되었습니다:
-
-- **자동 생성 코드 검증**: AI가 생성한 코드에 대한 SAST 스캔 강화
-- **라이선스 검증**: 학습 데이터 기반 코드의 저작권 문제 점검
-- **프롬프트 인젝션 방지**: AI 도구 자체에 대한 보안 고려
-
-#### IAM Policy Autopilot (AWS MCP 서버)
-
-AWS에서 오픈소스로 공개한 MCP(Model Context Protocol) 서버를 활용한 IAM 정책 자동 생성:
-
-```python
-# IAM Policy Autopilot 활용 예시
-# AWS MCP 서버를 통한 최소 권한 IAM 정책 자동 생성
-
-"""
-AI에게 요청 예시:
-"S3 버킷 'my-app-data'에서 읽기만 가능하고,
- DynamoDB 테이블 'users'에서 특정 파티션 키만
- 조회할 수 있는 최소 권한 IAM 정책을 생성해줘"
-"""
-
-# 자동 생성된 IAM 정책 예시
-iam_policy = {
-    "Version": "2012-10-17",
-    "Statement": [
-        {
-            "Sid": "S3ReadOnly",
-            "Effect": "Allow",
-            "Action": [
-                "s3:GetObject",
-                "s3:ListBucket"
-            ],
-            "Resource": [
-                "arn:aws:s3:::my-app-data",
-                "arn:aws:s3:::my-app-data/*"
-            ]
-        },
-        {
-            "Sid": "DynamoDBLimitedAccess",
-            "Effect": "Allow",
-            "Action": [
-                "dynamodb:GetItem",
-                "dynamodb:Query"
-            ],
-            "Resource": "arn:aws:dynamodb:*:*:table/users",
-            "Condition": {
-                "ForAllValues:StringEquals": {
-                    "dynamodb:LeadingKeys": ["${aws:userid}"]
-                }
-            }
-        }
-    ]
-}
-```
-
-#### AWS Security Agent (Preview)
-
-2025년 AWS re:Invent에서 발표된 Security Agent는 개발 전 과정에서 자동화된 보안 리뷰를 제공합니다:
-
-| 기능 | 설명 | 적용 단계 |
-|------|------|----------|
-| **코드 리뷰** | PR 생성 시 자동 보안 리뷰 | Code |
-| **IaC 검증** | CloudFormation/Terraform 보안 검증 | Build |
-| **런타임 분석** | 실행 중인 워크로드 취약점 탐지 | Operate |
-| **규정 준수** | 실시간 컴플라이언스 검사 | Monitor |
-
-### 8.2 Supply Chain Security 강화
-
-npm, PyPI 등 공급망 공격이 급증하면서 소프트웨어 공급망 보안이 최우선 과제가 되었습니다.
-
-#### SBOM (Software Bill of Materials) 필수화
-
-```yaml
-# GitHub Actions에서 SBOM 생성 및 검증
-name: Supply Chain Security
-
-on: [push, pull_request]
-
-jobs:
-  sbom-analysis:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      # SBOM 생성
-      - name: Generate SBOM
-        uses: anchore/sbom-action@v0
-        with:
-          format: spdx-json
-          output-file: sbom.spdx.json
-
-      # 의존성 취약점 스캔
-      - name: Scan SBOM for vulnerabilities
-        uses: anchore/scan-action@v3
-        with:
-          sbom: sbom.spdx.json
-          fail-build: true
-          severity-cutoff: high
-
-      # 라이선스 검증
-      - name: License Compliance Check
-        run: |
-          npx license-checker --production --failOn "GPL;AGPL"
-
-      # SBOM 아티팩트 저장
-      - name: Upload SBOM
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom
-          path: sbom.spdx.json
-```
-
-#### 의존성 검증 강화
-
-```bash
-# package-lock.json 무결성 검증
-npm ci --ignore-scripts  # 설치 스크립트 비활성화
-
-# npm audit 자동화
-npm audit --audit-level=high
-
-# Sigstore를 통한 패키지 서명 검증
-npm audit signatures
-```
-
-### 8.3 Shift Left Security - Security-by-Design
-
-보안을 개발 초기 단계부터 통합하는 Security-by-Design 접근법이 표준으로 자리잡았습니다.
-
-```
-┌─────────────────────────────────────────────────────────────────────┐
-│ Shift Left Security 적용 │
-├─────────────────────────────────────────────────────────────────────┤
-│ │
-│ 기존 방식 (Shift Right) │
-│ ┌─────┐ ┌─────┐ ┌─────┐ ┌─────┐ ┌─────────────┐ │
-│ │Plan │→│Code │→│Build│→│Test │→│ Security │ │
-│ └─────┘ └─────┘ └─────┘ └─────┘ │ (마지막) │ │
-│ └─────────────┘ │
-│ │
-│ 새로운 방식 (Shift Left + Security-by-Design) │
-│ ┌───────────────────────────────────────────────────────────┐ │
-│ │ Security │ │
-│ │ ↓ ↓ ↓ ↓ ↓ │ │
-│ │ ┌─────┐ ┌─────┐ ┌─────┐ ┌─────┐ ┌─────┐ │ │
-│ │ │Plan │→│Code │→│Build│→│Test │→│Deploy│ │ │
-│ │ └─────┘ └─────┘ └─────┘ └─────┘ └─────┘ │ │
-│ └───────────────────────────────────────────────────────────┘ │
-│ │
-└─────────────────────────────────────────────────────────────────────┘
-```
-
-### 8.4 GitHub 보안 2025 업데이트
-
-GitHub에서 제공하는 보안 기능이 크게 강화되었습니다.
-
-#### GitHub Advanced Security + Copilot 통합
-
-```yaml
-# .github/workflows/ghas-copilot.yml
-name: GitHub Advanced Security with Copilot
-
-on:
-  pull_request:
-    branches: [main]
-
-jobs:
-  security-review:
-    runs-on: ubuntu-latest
-    permissions:
-      security-events: write
-      contents: read
-      pull-requests: write
-
-    steps:
-      - uses: actions/checkout@v4
-
-      # CodeQL 분석 + Copilot 자동 수정 제안
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: javascript, python
-          # Copilot이 취약점 수정 코드 자동 제안
-          copilot-autofix: true
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
-          # AI 기반 취약점 우선순위 지정
-          ai-severity-ranking: true
-```
-
-#### Secret Scanning Push Protection 기본 활성화
-
-2025년부터 모든 공개 저장소에서 Secret Scanning Push Protection이 기본 활성화됩니다:
-
-```yaml
-# .github/secret_scanning.yml
-# Secret Scanning 커스텀 패턴 설정
-patterns:
-  - name: "Internal API Key"
-    pattern: "INTERNAL_API_[A-Z0-9]{32}"
-    severity: high
-
-  - name: "Database Connection String"
-    pattern: "mongodb\\+srv://[^:]+:[^@]+@"
-    severity: critical
-
-# Push Protection 설정
-push_protection:
-  enabled: true
-  # 바이패스 시 승인 필요
-  bypass_requires_approval: true
-  # 감사 로그 활성화
-  audit_logging: true
-```
-
-#### Dependabot 자동 수정 기능 강화
-
+<!-- 전체 코드는 위 GitHub 링크 참조
 ```yaml
 # .github/dependabot.yml
 version: 2
@@ -787,7 +152,9 @@ updates:
     compatibility-scoring:
       enabled: true
       minimum-score: 0.8
+
 ```
+-->
 
 ### 8.5 2025 DevSecOps 도구 업데이트
 
