--- a/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
+++ b/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
@@ -108,20 +108,17 @@ image_alt: "Cloud Security 8Batch 1Week: From Infrastructure Essence to Security
 
 ### 1.3 실무에서 자주 발생하는 인프라 보안 이슈
 
-**네트워크 보안**
-- Public 서브넷에 데이터베이스 배치
-- 과도하게 개방된 Security Group 규칙
-- 인터넷 게이트웨이를 통한 불필요한 외부 접근
-
-**접근 제어**
-- 루트 계정의 일상적 사용
-- 과도한 권한을 가진 IAM 사용자/역할
-- 하드코딩된 자격 증명
-
-**데이터 보호**
-- 암호화되지 않은 민감 데이터 저장
-- Public 버킷에 민감 정보 노출
-- 백업 및 복구 계획 부재
+| 보안 영역 | 주요 이슈 | 위험도 | 대응 방안 |
+|----------|---------|-------|----------|
+| **네트워크 보안** | Public 서브넷에 데이터베이스 배치 | 높음 | Private 서브넷으로 이동, Security Group 최소 권한 원칙 |
+| | 과도하게 개방된 Security Group 규칙 | 높음 | 필요한 포트만 개방, 정기적 검토 |
+| | 인터넷 게이트웨이를 통한 불필요한 외부 접근 | 중간 | VPC Endpoint 활용, NAT Gateway 최적화 |
+| **접근 제어** | 루트 계정의 일상적 사용 | 높음 | IAM 사용자/역할 사용, 루트 계정 MFA 강제 |
+| | 과도한 권한을 가진 IAM 사용자/역할 | 높음 | 최소 권한 원칙 적용, IAM Policy Autopilot 활용 |
+| | 하드코딩된 자격 증명 | 높음 | Secrets Manager, 환경 변수 활용 |
+| **데이터 보호** | 암호화되지 않은 민감 데이터 저장 | 높음 | S3, EBS 기본 암호화 활성화 |
+| | Public 버킷에 민감 정보 노출 | 높음 | Public Access Block 활성화, 버킷 정책 검토 |
+| | 백업 및 복구 계획 부재 | 중간 | AWS Backup 자동화, 정기적 복구 테스트 |
 
 ## 2. 2025년 클라우드 보안의 핵심 트렌드
 
@@ -130,41 +127,26 @@ image_alt: "Cloud Security 8Batch 1Week: From Infrastructure Essence to Security
 2025년 클라우드 보안에서 AI는 양날의 검이 되었습니다:
 
 #### AI 기반 보안 위협
+
+| 위협 유형 | 설명 | 위험도 | 대응 방안 |
+|----------|------|-------|----------|
+| **Shadow AI** | 승인되지 않은 AI 도구 사용 | 높음 | AI 사용 정책 수립, 네트워크 트래픽 모니터링, 승인된 AI 도구 화이트리스트 |
+| **Deepfakes** | AI 생성 가짜 콘텐츠를 통한 사기 | 높음 | 다중 인증, 대역 외 확인, 음성/영상 인증 강화 |
+| **AI 기반 공격** | AI를 활용한 자동화된 공격 | 높음 | 행위 기반 탐지, Rate Limiting, 이상 탐지 시스템 |
+| | 지능형 자격 증명 스터핑 | 중간 | 다중 인증, CAPTCHA, 로그인 시도 제한 |
+| | 적응형 피싱 | 높음 | AI 탐지 도구, 사용자 교육, 이메일 필터링 강화 |
+| | 자율적 취약점 악용 | 높음 | 취약점 스캔 자동화, 패치 관리, 위협 인텔리전스 |
+
 > **참고**: AI 보안 위협 관련 내용은 [OWASP Top 10 for LLM Applications](https://owasp.org/www-project-top-10-for-large-language-model-applications/) 및 [MITRE ATLAS](https://atlas.mitre.org/)를 참조하세요.
 
-```yaml
-# 2025년 주요 AI 보안 위협
-ai_security_threats:
-  shadow_ai:
-    description: "승인되지 않은 AI 도구 사용"
-    risk_level: "HIGH"
-    mitigation:
-      - ai_usage_policy_enforcement
-      - network_traffic_monitoring
-      - approved_ai_tool_whitelist
-
-  deepfakes:
-    description: "AI 생성 가짜 콘텐츠를 통한 사기"
-    targets:
-      - executive_impersonation
-      - voice_cloning
-      - video_manipulation
-    defense:
-      - multi_factor_verification
-      - out_of_band_confirmation
-
-  ai_powered_attacks:
-    description: "AI를 활용한 자동화된 공격"
-    types:
-      - intelligent_credential_stuffing
-      - adaptive_phishing
-      - autonomous_vulnerability_exploitation
-```
-
 #### AI 기반 보안 방어
-- **AWS Security Agent (Preview)**: AI 기반 보안 자동화
-- **Amazon GuardDuty Extended Threat Detection**: 공격 시퀀스 탐지
-- **Copilot Autofix**: 코드 취약점 자동 수정
+
+| 방어 도구 | 설명 | 활용 시나리오 |
+|----------|------|-------------|
+| **AWS Security Agent (Preview)** | AI 기반 보안 자동화 | 개발 전 과정 보안 자동화 |
+| **Amazon GuardDuty Extended Threat Detection** | 공격 시퀀스 탐지 | 복합 공격 패턴 자동 연결 |
+| **Copilot Autofix** | 코드 취약점 자동 수정 | 개발 단계 취약점 자동 수정 |
+| **IAM Policy Autopilot** | AI 기반 IAM 정책 자동 생성 | 최소 권한 정책 자동 생성 |
 
 ### 2.2 Zero Trust 아키텍처 진화
 
@@ -205,29 +187,32 @@ ai_security_threats:
 
 ### 2.3 클라우드 네이티브 보안
 
+#### 컨테이너 보안
+
+| 보안 영역 | 기능 | 설명 |
+|----------|------|------|
+| **이미지 스캔** | 빌드 시점 취약점 탐지 | CI/CD 파이프라인에 이미지 스캔 통합 |
+| **런타임 보호** | 컨테이너 런타임 보안 | Falco, Aqua Security 등 런타임 보안 도구 |
+| **네트워크 정책** | Pod 간 통신 제어 | Kubernetes Network Policies를 통한 마이크로 세그멘테이션 |
+
+#### Kubernetes 보안 (1.32+)
+
+| 기능 | 설명 | 보안 이점 |
+|------|------|----------|
+| **Fine-grained Kubelet API Authorization** | Kubelet API에 대한 세밀한 권한 제어 | 최소 권한 원칙 적용 |
+| **Credential Tracking** | 자격 증명 추적 및 관리 | 자격 증명 유출 탐지 |
+| **User Namespaces** | Pod 사용자 네임스페이스 격리 | 컨테이너 탈출 위험 감소 |
+| **Pod Certificates for mTLS** | Pod 간 상호 TLS 인증 | 네트워크 트래픽 암호화 |
+
+#### 서버리스 보안
+
+| 보안 기능 | 설명 | 구현 방법 |
+|----------|------|----------|
+| **Function Permission Boundaries** | Lambda 함수 권한 경계 설정 | 최소 권한 원칙 적용 |
+| **Event Source Validation** | 이벤트 소스 검증 | 무단 이벤트 차단 |
+| **Execution Environment Isolation** | 실행 환경 격리 | 함수 간 격리 강화 |
+
 > **참고**: 클라우드 네이티브 보안 관련 내용은 [CNCF Security Whitepaper](https://github.com/cncf/tag-security) 및 [Kubernetes 보안 모범 사례](https://kubernetes.io/docs/concepts/security/best-practices/)를 참조하세요.
-
-```yaml
-# 2025년 클라우드 네이티브 보안 스택
-cloud_native_security:
-  container_security:
-    - image_scanning: "빌드 시점 취약점 탐지"
-    - runtime_protection: "컨테이너 런타임 보안"
-    - network_policies: "Pod 간 통신 제어"
-
-  kubernetes_security:
-    version: "1.32+"
-    features:
-      - fine_grained_kubelet_api_authorization
-      - credential_tracking
-      - user_namespaces
-      - pod_certificates_for_mtls
-
-  serverless_security:
-    - function_permission_boundaries
-    - event_source_validation
-    - execution_environment_isolation
-```
 
 ### 2.4 규제 및 컴플라이언스 동향
 
@@ -242,38 +227,52 @@ cloud_native_security:
 
 ### 2.5 FinOps와 보안의 융합
 
+#### 비용 인식 보안 (Cost-Aware Security)
+
+| 전략 | 설명 | 실무 적용 |
+|------|------|----------|
+| **보안 도구 비용 최적화** | 보안 도구의 비용 효율성 고려 | Security Hub, GuardDuty 비용 모니터링 |
+| **리스크 기반 리소스 할당** | 위험도에 따른 보안 투자 우선순위 설정 | 중요도 높은 리소스에 우선 투자 |
+| **컴플라이언스 비용 추적** | 규정 준수 비용 관리 | ISMS-P 등 인증 유지 비용 추적 |
+
+#### 보안 인식 FinOps (Security-Aware FinOps)
+
+| 전략 | 설명 | 실무 적용 |
+|------|------|----------|
+| **데이터 분류 기반 티어링** | 데이터 중요도에 따른 스토리지 티어 선택 | 민감 데이터는 고성능 티어 사용 |
+| **암호화 오버헤드 계획** | 암호화로 인한 성능 및 비용 영향 고려 | 암호화 방식 선택 시 비용 고려 |
+| **보안 사고 비용 영향** | 보안 사고로 인한 비용 영향 분석 | 사고 대응 비용 추적 및 예산 계획 |
+
+#### 공유 메트릭
+
+| 메트릭 | 설명 | 활용 방법 |
+|--------|------|----------|
+| **Cost per Protected Asset** | 보호된 자산당 비용 | 보안 투자 효율성 측정 |
+| **Security Investment ROI** | 보안 투자 ROI | 보안 투자의 비즈니스 가치 정량화 |
+| **Compliance Cost Efficiency** | 컴플라이언스 비용 효율성 | 규정 준수 비용 최적화 |
+
 > **참고**: FinOps와 보안 통합 관련 내용은 [FinOps Foundation](https://www.finops.org/) 및 [AWS Cost Management](https://docs.aws.amazon.com/awsaccountbilling/latest/aboutv2/)를 참조하세요.
-
-```yaml
-# 2025년 FinOps + Security 통합
-finops_security_integration:
-  cost_aware_security:
-    - security_tool_cost_optimization
-    - risk_based_resource_allocation
-    - compliance_cost_tracking
-
-  security_aware_finops:
-    - data_classification_for_tiering
-    - encryption_overhead_planning
-    - security_incident_cost_impact
-
-  shared_metrics:
-    - cost_per_protected_asset
-    - security_investment_roi
-    - compliance_cost_efficiency
-```
 
 ## 결론
 
-클라우드 시큐리티 8기 1주차에서는 인프라의 본질부터 보안의 미래까지 다뤘습니다. 
+클라우드 시큐리티 8기 1주차에서는 **인프라의 본질부터 보안의 미래까지** 다뤘습니다.
 
 **인프라의 본질**에서는 클라우드 인프라의 핵심 구성 요소(네트워크, 컴퓨팅, 스토리지)와 보안 관점에서의 인프라 설계 원칙을 살펴봤습니다. 방어의 깊이, 최소 권한 원칙, 모니터링 및 감사가 클라우드 보안의 기초가 됩니다.
 
 **보안의 미래**에서는 2025년 클라우드 보안의 핵심 트렌드를 다뤘습니다:
-- **AI 보안**: AI 기반 위협과 방어 도구의 진화
-- **Zero Trust**: 지속적 검증과 동적 권한 관리
-- **클라우드 네이티브 보안**: 컨테이너와 Kubernetes 보안의 고도화
-- **규제 및 컴플라이언스**: AI Act, ISMS-P 등 새로운 규제 대응
-- **FinOps와 보안의 융합**: 비용 효율적인 보안 운영
 
-클라우드 보안은 단순한 기술 구현이 아닌, 인프라의 본질을 이해하고 미래 트렌드를 선제적으로 대응하는 전략적 접근이 필요합니다. 올바른 인프라 설계와 지속적인 보안 모니터링을 통해 안전하고 효율적인 클라우드 환경을 구축할 수 있습니다.
+| 트렌드 | 주요 내용 | 실무 적용 포인트 |
+|--------|----------|----------------|
+| **AI 보안** | AI 기반 위협과 방어 도구의 진화 | Shadow AI 모니터링, AI 탐지 도구 도입 |
+| **Zero Trust** | 지속적 검증과 동적 권한 관리 | 위험도 기반 접근 제어, 지속적 모니터링 |
+| **클라우드 네이티브 보안** | 컨테이너와 Kubernetes 보안의 고도화 | 이미지 스캔, 네트워크 정책, 런타임 보호 |
+| **규제 및 컴플라이언스** | AI Act, ISMS-P 등 새로운 규제 대응 | AI 거버넌스 프레임워크, 데이터 지역화 검토 |
+| **FinOps와 보안의 융합** | 비용 효율적인 보안 운영 | 보안 투자 ROI 측정, 비용 인식 보안 |
+
+**실무에서 자주 발생하는 인프라 보안 이슈**에서는 네트워크 보안, 접근 제어, 데이터 보호 영역의 주요 이슈와 대응 방안을 표 형식으로 정리했습니다. 이러한 이슈들을 사전에 인지하고 대응하는 것이 중요합니다.
+
+클라우드 보안은 단순한 기술 구현이 아닌, 인프라의 본질을 이해하고 미래 트렌드를 선제적으로 대응하는 전략적 접근이 필요합니다. 올바른 인프라 설계와 지속적인 보안 모니터링을 통해 안전하고 효율적인 클라우드 환경을 구축할 수 있습니다. 특히 2025년에는 AI 보안과 Zero Trust 아키텍처가 핵심 트렌드로 부상했으며, 이러한 트렌드를 선제적으로 대응하는 것이 핵심입니다.
+
+---
+
+**원본 포스트**: [클라우드 시큐리티 8기 1주차: 인프라의 본질부터 보안의 미래까지](https://twodragon.tistory.com/701)
