refactor: 코드 개선 및 최적화
- CSS: 중복 코드 제거, 하드코딩된 색상 값을 CSS 변수로 대체, 성능 최적화
- HTML: 접근성 개선 (ARIA 속성 추가, SVG aria-hidden 추가)
- Service Worker: 에러 핸들링 개선 및 안정성 향상
- CSP: Google Ads 호환성을 위한 unsafe-eval 허용 (보안 고려사항 문서화)
- 코드 일관성 및 주석 개선

--- a/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
+++ b/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
@@ -9,6 +9,7 @@ comments: true
 original_url: https://twodragon.tistory.com/701
 image: /assets/images/2025-11-26-Cloud_Security_8Batch_1Week_Infrastructure_EssenceFrom_Security_FutureTo.svg
 image_alt: "Cloud Security 8Batch 1Week: From Infrastructure Essence to Security Future"
+toc: true
 ---
  
 
