feat: 자격증 카테고리 및 페이지 추가
- 자격증 카테고리 시스템 추가 (AWS-SAA, 정보보안기사, 정보처리기사, ISMS-P, CKAD, CKA)
- certifications.html 메인 페이지 생성
- 각 자격증별 개별 페이지 생성
- 포스트에 자격증 태그 추가 (certifications 필드)
- 네비게이션에 Certifications 메뉴 추가
- categories.html에 자격증 아이콘 추가

관련 포스트:
- ISMS-P: 3개 포스트
- AWS-SAA: 5개 포스트
- CKAD/CKA: 3개 포스트

--- a/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
+++ b/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
@@ -4,6 +4,7 @@ title: "클라우드 보안 과정 7기 - 4주차 AWS 취약점 점검 및 ISMS 
 date: 2025-05-09 17:35:20 +0900
 categories: cloud
 tags: [AWS, ISMS, Vulnerability, Compliance]
+certifications: [isms-p, aws-saa]
 excerpt: "클라우드 보안 과정 7기 4주차: AWS 취약점 점검 도구(Security Hub 통합 보안 관리, Inspector EC2/ECR/EC2/Lambda 취약점 스캔, Trusted Advisor 비용/성능/보안 권장사항, GuardDuty 위협 탐지, Config 컴플라이언스 규칙 자동 점검), ISMS-P 인증 대응(AWS Artifact 보안 문서 확보, Config Rules 컴플라이언스 규칙, Security Hub 보안 표준 준수 현황, CloudTrail 감사 로그 수집/보관), AWS re:Invent 2025 보안 발표(Security Agent 자동화된 보안 리뷰/컨텍스트 인식 침투 테스트, GuardDuty Extended 2개 새로운 공격 시퀀스 탐지, GuardDuty Malware Protection for AWS Backup 증분 스캔, Security Hub GA 업데이트 보안 위험 중앙 집중화/히스토리 트렌드/노출 요약/커스텀 위젯, IAM Policy Autopilot AI 기반 IAM 정책 자동 생성), AI 보안 솔루션(AgentCore Identity, Third-party 보안 통합 SentinelOne/Salt Security/HiddenLayer), 실무 보안 역량 강화(20분 강의+5분 휴식 루틴)까지 정리."
 comments: true
 original_url: https://twodragon.tistory.com/682
