feat: 2025년 이후 최신 업데이트 내용 추가
- ISMS-P: NIST CSF 2.0 AI 보안 요구사항, AI 시스템 보안 통제 강화, 위협 인텔리전스 및 공격 표면 관리 도입
- AWS: IAM aws:SourceVpcArn 조건 키, VPC 오리진 교차 계정 지원, S3 Express One Zone IPv6 지원, RDS EKS 백업 지원, EKS 향상된 네트워크 보안 정책
- GCP: IAM Recommender 개선, Cloud SQL 자동 백업 강화, Cloud Storage 라이프사이클 정책 개선, GKE Pod Security Standards 강화, Security Command Center AI 기반 위협 탐지
- CSPM DataDog: 1,000개 이상 컴플라이언스 규칙, 실시간 알림 및 자동 수정, AI 기반 옵저버빌리티 통합, 자동화된 워크플로우 개선

--- a/_posts/2026-01-14-2025년_ISMS-P_인증_완벽_가이드_AWS_환경에서_관리체계_수립_및_보호대책_구현.md
+++ b/_posts/2026-01-14-2025년_ISMS-P_인증_완벽_가이드_AWS_환경에서_관리체계_수립_및_보호대책_구현.md
@@ -478,6 +478,54 @@ Resources:
 
 ---
 
+## 6. 2025년 이후 최신 업데이트
+
+### 6.1 NIST CSF 2.0 AI 보안 요구사항
+
+2025년 8월 21일, 한국인터넷진흥원(KISA)은 AI 서비스 기업이 고려해야 할 보안 요구사항을 발표하였으며, 이는 NIST CSF 2.0의 최신 보안 요구사항을 반영한 것입니다.
+
+#### AI 시스템 보안 통제 강화
+
+| 보안 통제 | 설명 | AWS 구현 방법 |
+|----------|------|-------------|
+| **AI 모델 학습 데이터 보호** | 학습 데이터 암호화 및 접근 제어 | S3 암호화, IAM 정책 |
+| **모델 무결성 검증** | 모델 변조 방지 및 검증 | S3 버전 관리, 체크섬 검증 |
+| **AI 시스템 오남용 방지** | 악의적 사용 방지 및 모니터링 | CloudWatch, GuardDuty |
+
+#### 위협 인텔리전스 및 공격 표면 관리
+
+| 기능 | 설명 | AWS 구현 방법 |
+|------|------|-------------|
+| **AI 기반 위협 인텔리전스** | AI 기반 위협 탐지 및 분석 | GuardDuty, Security Hub |
+| **공격 표면 관리 (ASM)** | AI 서비스의 보안 취약점 식별 | Security Hub, Config |
+| **자동화된 대응** | 위협 탐지 시 자동 대응 | EventBridge, Lambda |
+
+### 6.2 AI 서비스 개인정보 보호 강화
+
+#### 개인정보 처리 과정 보안 조치
+
+| 처리 단계 | 보안 요구사항 | AWS 구현 방법 |
+|----------|-------------|-------------|
+| **수집** | 최소 수집 원칙, 암호화 저장 | S3 암호화, 데이터 분류 |
+| **저장** | 암호화 저장, 접근 제어 | KMS, IAM 정책 |
+| **처리** | 처리 과정 로깅, 무결성 검증 | CloudTrail, S3 버전 관리 |
+| **파기** | 완전 삭제, 파기 내역 기록 | S3 라이프사이클 정책, CloudTrail |
+
+### 6.3 NIST CSF 2.0 사이버 AI 프로파일
+
+NIST는 AI 시스템의 안전한 도입을 위한 사이버보안 프레임워크 초안인 '사이버 AI 프로파일'을 공개하였습니다.
+
+#### 주요 내용
+
+| 영역 | 설명 | ISMS-P 연계 |
+|------|------|------------|
+| **AI 시스템 식별** | AI 자산 분류 및 관리 | 자산 관리 요구사항 |
+| **AI 위협 보호** | AI 특유의 위협 요소 대응 | 보호대책 요구사항 |
+| **AI 위협 탐지** | AI 기반 위협 탐지 | 모니터링 요구사항 |
+| **AI 위협 대응** | AI 위협 대응 체계 | 침해사고 대응 요구사항 |
+
+---
+
 ## 결론
 
 2025년 개정된 ISMS-P 인증 기준은 클라우드 환경에서의 보안 요구사항을 더욱 강화하고, NIST CSF 2.0 연계, AI 보안 요구사항 등 최신 보안 트렌드를 반영하고 있습니다.
